# k-means

./: .clang-format  .clang-tidy  .clangformat  .gitignore  .gitmodules  CMakeLists.txt  DataPoint.hpp  K_means.h  K_means.hpp  Makefile  README.md  cmake_install.cmake  compile_commands.json  demo.cpp  example.cpp  main.cpp  vcpkg.json
cmake/: Cache.cmake  CompilerWarnings.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake
include/kmn/: DataPoint.hpp  K_means.hpp
src/: CMakeLists.txt  Makefile  cmake_install.cmake  demo  demo.cpp
